# ecommerce-realtime-project

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
infra/docker/: docker-compose.yml
infra/docker/postgres-init/analytics/: 01-schema.sql
infra/docker/postgres-init/oltp/: 01-schema.sql
src/batch/spark_jobs/: clickstream_consumer.py
src/producers/event_generator/: config.py  main.py  schemas.py
