[project]
name = "ecommerce-realtime-pipeline"
version = "0.1.0"
description = "End-to-end real-time analytics pipeline for e-commerce data"
requires-python = ">=3.11"
dependencies = [
    "confluent-kafka>=2.3.0",
    "faker>=24.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]
spark = [
    "pyspark==3.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests", "src"]
python_files = ["test_*.py", "*_test.py"]